feat: Add calculator and math operations tools with comprehensive functionalities
- Introduced calculator tool for basic arithmetic operations (addition, subtraction, multiplication, division).
- Implemented math operations tool supporting advanced calculations including prime checks, factor analysis, statistical analysis, range checking, outlier detection, and more.
- Added structured prompts and schemas for both tools to facilitate user interaction and input validation.
- Developed web search tool for querying Google Custom Search API and scraping content from URLs, including robust error handling and credential management.
- Enhanced documentation with detailed usage examples and configuration instructions for all tools.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,92 @@
-test.py
+# ============================================
+# UltraGPT .gitignore
+# ============================================
+
+# ----- Environment & Secrets -----
+.env
+*.env
+.env.*
+
+# ----- Python Cache & Build Artifacts -----
 __pycache__/
+*.py[cod]
+*$py.class
+*.so
+*.pyo
+*.pyd
+.Python
+build/
+dist/
+*.egg-info/
+*.egg
+.eggs/
+*.manifest
+*.spec
+pip-log.txt
+pip-delete-this-directory.txt
+
+# ----- IDE & Editor -----
+.idea/
+.vscode/
+*.code-workspace
+*.swp
+*.swo
+*~
+tests/
+.project
+.pydevproject
+.settings/
+
+# ----- Testing Cache (not tests themselves) -----
+.pytest_cache/
+.tox/
+.nox/
+.coverage
+.coverage.*
+htmlcov/
+.hypothesis/
+pytest_cache/
+
+# ----- MCP & Infinite Code -----
+.infinitecode/
+._mcp_deleted_backups/
+
+# ----- Project-Specific Exclusions -----
+# Debug outputs
+debug/
+
+# Temporary test files (not the main tests/ folder)
+tmp_tests/
+
+# Cache directories
+cache/
+
+# Todo (internal notes)
+todo/
+
+# Upload scripts (contains credentials logic)
+upload.bat
 _auto_git_summary.bat
-reports/
+
+# Jupyter checkpoints
+.ipynb_checkpoints/
+*.ipynb
+
+# ----- OS-Specific -----
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# ----- Type Checking -----
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.pytype/
+
+# ----- Virtual Environments -----
+venv/
+ENV/
+env/
+.venv/
+env/
+.venv/
